<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/albumOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAlbumBg"
        android:padding="@dimen/normal_margin_size"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin_size"
            android:src="@drawable/ic_arrow_back"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_arrow_icon"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:id="@+id/btnMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more_vert"
            android:background="@android:color/transparent"
            android:contentDescription="@string/more_vert_icon"
            android:layout_alignTop="@id/btnBack"
            android:layout_alignBottom="@id/btnBack"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/normal_margin_size"
            android:src="@drawable/ic_search"
            android:background="@android:color/transparent"
            android:contentDescription="@string/search_icon"
            android:layout_alignTop="@id/btnBack"
            android:layout_alignBottom="@id/btnBack"
            android:layout_toStartOf="@id/btnMore"/>

        <ImageView
            android:id="@+id/imageAlbum"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/coloring_book"
            android:layout_marginTop="@dimen/normal_margin_size"
            android:layout_marginBottom="@dimen/normal_margin_size"
            android:contentDescription="@string/album_image"
            android:layout_alignParentStart="true"
            android:layout_below="@id/btnBack"/>

        <TextView
            android:id="@+id/albumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="@dimen/normal_margin_size"
            android:text="@string/str_coloring_book"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:layout_toEndOf="@id/imageAlbum"
            android:layout_alignTop="@id/imageAlbum"/>

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_chance_the_rapper_2016"
            android:textSize="15sp"
            android:textColor="@android:color/darker_gray"
            android:layout_alignStart="@id/albumName"
            android:layout_below="@id/albumName"/>

        <ImageButton
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_image_icon"
            android:src="@drawable/ic_add_to_photos"
            android:layout_alignBottom="@id/imageAlbum"
            android:layout_alignStart="@id/albumName"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin_size"
            android:background="@android:color/transparent"
            android:contentDescription="@string/download_icon"
            android:src="@drawable/ic_download"
            android:layout_toEndOf="@id/btnPlus"
            android:layout_alignTop="@id/btnPlus"
            android:layout_alignBottom="@id/btnPlus"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/textTracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin_size"
        android:text="@string/str_14_tracks"
        android:layout_alignParentStart="true"
        android:layout_below="@id/albumOverview"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTracks"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/progressBar"
        tools:listitem="@layout/item_track_other" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:progress="80"
        android:progressTint="@color/colorOrange"
        android:progressBackgroundTint="@color/colorAlbumBg"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/imageAlbumSmall"
        style="@android:style/Widget.ProgressBar.Horizontal" />

    <ImageView
        android:id="@+id/imageAlbumSmall"
        android:layout_width="@dimen/small_album_size"
        android:layout_height="@dimen/small_album_size"
        android:src="@drawable/coloring_book"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/album_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorAlbumBg"
        android:paddingStart="@dimen/normal_margin_size"
        android:paddingEnd="0dp"
        android:layout_toEndOf="@id/imageAlbumSmall"
        android:layout_alignTop="@id/imageAlbumSmall"
        android:layout_alignBottom="@id/imageAlbumSmall">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/str_song_title"
            android:textSize="15sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/str_chance_the_rapper"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp" />

    </LinearLayout>

    <ImageButton
        android:layout_width="@dimen/small_album_size"
        android:layout_height="@dimen/small_album_size"
        android:background="#C9272727"
        android:src="@drawable/ic_pause"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/imageAlbumSmall"
        android:contentDescription="@string/pause_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="-30dp"
        android:src="@drawable/ic_pause"
        android:backgroundTint="@color/colorOrange"
        android:layout_below="@id/albumOverview"
        android:layout_alignParentEnd="true"
        app:borderWidth="0dp"
        app:elevation="15dp"/>

</RelativeLayout>